Add new content to guide

--- a/docs/content/guides/developer/app-examples/trustless-swap/backend.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap/backend.mdx
@@ -7,7 +7,7 @@ sidebar_label: Backend
 
 :::note Multi-Page Guide
 
-This is the second in a [three-part guide](./intro.mdx) on how to build a trustless atomic swap on Sui.
+This is the second in a [three-part guide](./intro.mdx) on how to build an app for trustless atomic swaps on Sui.
 
 :::
 
