--- a/docs/content/guides/developer/app-examples/trustless-swap/frontend.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap/frontend.mdx
@@ -8,7 +8,7 @@ toc_max_heading_level: 2
 
 :::note Multi-Page Guide
 
-This is the third in a [three-part guide](./intro.mdx) on how to build a trustless atomic swap on Sui.
+This is the third in a [three-part guide](./intro.mdx) on how to build an app for trustless atomic swaps on Sui.
 
 :::
 
