--- a/docs/content/guides/developer/app-examples/trustless-swap/intro.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap/intro.mdx
@@ -42,4 +42,5 @@ Before getting started, make sure you have:
 
 - [Installed the latest version of Sui](../../getting-started/sui-install.mdx).
 - [Configured a valid network environment](../../../../references/cli/client.mdx#set-current-environment), as you will be deploying the module on Testnet.
+- [Acquired Devnet or Testnet](../../getting-started/get-coins.mdx) tokens for development purposes.
 - Read the basics of [shared versus owned objects](../../sui-101/shared-owned.mdx).
