Fix bytes in signPersonalMessage

--- a/sdk/docs/pages/typescript/v1-migration.mdx
+++ b/sdk/docs/pages/typescript/v1-migration.mdx
@@ -74,6 +74,7 @@ Removed `is` and `assert` helpers
 - removed registry
 - default maxSize of writer = Infinity
 - renamed `size` to `initialSize` in writer
+- signPersonalMessage fix returned bytes to not be wrapped
 
 # dapp-kit
 
