--- a/docs/content/references/cli/client.mdx
+++ b/docs/content/references/cli/client.mdx
@@ -113,7 +113,7 @@ $ sui client active-address
 
 ### Request a SUI coin from faucet
 
-If you use one of the standard public RPCs (e.g., `fullnode.testnet.sui.io:443`), you can use the `faucet` command to request for a gas coin. If you use a custom faucet service, then pass in the URL to the faucet using the `--url` option.
+If you use one of the standard public RPCs (for example, `fullnode.testnet.sui.io:443`), you can use the `faucet` command to request gas coins. If you use a custom faucet service, then pass in the URL to the faucet using the `--url` option.
 
 ```shell
 $ sui client faucet
