--- a/sdk/docs/pages/dapp-kit/index.mdx
+++ b/sdk/docs/pages/dapp-kit/index.mdx
@@ -56,8 +56,8 @@ function App() {
 ## Using UI components to connect to a wallet
 
 The dApp Kit provides a set of flexible UI components that you can use to connect and manage wallet
-accounts from your dApp. The components are built on top of [Radix UI](radix-ui.com/primitives) and
-are customizable.
+accounts from your dApp. The components are built on top of
+[Radix UI](https://www.radix-ui.com/primitives) and are customizable.
 
 To use the provided UI components, import the dApp Kit CSS stylesheet into your dApp. For more
 information regarding customization options, check out the respective documentation pages for the
