--- a/docs/content/references/cli/cheatsheet.mdx
+++ b/docs/content/references/cli/cheatsheet.mdx
@@ -40,9 +40,15 @@ The cheat sheet highlights common Sui CLI commands.
 			<td class="w-2/3">`sui client switch --address ADDRESS`</td>
 			<td class="w-1/3">Make this the active address (accepts also an alias)</td>
 		</tr>
+		<tr> 	<td class="w-2/3">`sui keytool convert PRIVATE_KEY`</td>
+			<td class="w-1/3">Convert private key in Hex or Base64 to new format (Bech32 encoded 33 byte flag || private key starting with "suiprivkey")</td>
+		</tr>
 		<tr>
 			<td class="w-2/3">`sui keytool generate ed25519`</td>
 			<td class="w-1/3">Generate a new keypair with ED25519 scheme and save it to file</td>
+		</tr>
+		<tr> 	<td class="w-2/3">`sui keytool import INPUT KEY_SCHEME`</td>
+			<td class="w-1/3">Add a new key to Sui CLI Keystore using either the input mnemonic phrase or a Bech32 encoded 33-byte flag || privkey starting with "suiprivkey"</td>
 		</tr>
 		<tr>
 			<td class="w-2/3">`sui keytool update-alias OLD_ALIAS NEW_ALIAS`</td>
@@ -62,14 +68,6 @@ The cheat sheet highlights common Sui CLI commands.
 	</thead>
 	<tbody>
 		<tr>
-			<td class="w-2/3">`sui client gas`</td>
-			<td class="w-1/3">List the gas coins for the active address</td>
-		</tr>
-		<tr>
-			<td class="w-2/3">`sui client gas ADDRESS`</td>
-			<td class="w-1/3">List the gas coins for the given address (accepts also an alias)</td>
-		</tr>
-		<tr>
 			<td class="w-2/3">`sui client faucet`</td>
 			<td class="w-1/3">Get a SUI coin from the faucet associated with the active network</td>
 		</tr>
@@ -80,6 +78,14 @@ The cheat sheet highlights common Sui CLI commands.
 		<tr>
 			<td class="w-2/3">`sui client faucet --url CUSTOM_FAUCET_URL`</td>
 			<td class="w-1/3">Get a SUI coin from custom faucet</td>
+		</tr>
+		<tr>
+			<td class="w-2/3">`sui client gas`</td>
+			<td class="w-1/3">List the gas coins for the active address</td>
+		</tr>
+		<tr>
+			<td class="w-2/3">`sui client gas ADDRESS`</td>
+			<td class="w-1/3">List the gas coins for the given address (accepts also an alias)</td>
 		</tr>
 	</tbody>
 </table>
@@ -140,7 +146,7 @@ The cheat sheet highlights common Sui CLI commands.
 			<td class="w-1/3">Build the Move project in the current directory</td>
 		</tr>
 		<tr>
-			<td class="w-2/3">`sui move build --path`</td>
+			<td class="w-2/3">`sui move build --path PATH`</td>
 			<td class="w-1/3">Build the Move project from the given path</td>
 		</tr>
 		<tr>
