--- a/docs/content/references/cli/cheatsheet.mdx
+++ b/docs/content/references/cli/cheatsheet.mdx
@@ -40,7 +40,8 @@ The cheat sheet highlights common Sui CLI commands.
 			<td class="w-2/3">`sui client switch --address ADDRESS`</td>
 			<td class="w-1/3">Make this the active address (accepts also an alias)</td>
 		</tr>
-		<tr> 	<td class="w-2/3">`sui keytool convert PRIVATE_KEY`</td>
+		<tr> 	
+			<td class="w-2/3">`sui keytool convert PRIVATE_KEY`</td>
 			<td class="w-1/3">Convert private key in Hex or Base64 to new format (Bech32 encoded 33 byte flag || private key starting with "suiprivkey")</td>
 		</tr>
 		<tr>
