--- a/docs/content/references/cli/cheatsheet.mdx
+++ b/docs/content/references/cli/cheatsheet.mdx
@@ -48,7 +48,8 @@ The cheat sheet highlights common Sui CLI commands.
 			<td class="w-2/3">`sui keytool generate ed25519`</td>
 			<td class="w-1/3">Generate a new keypair with ED25519 scheme and save it to file</td>
 		</tr>
-		<tr> 	<td class="w-2/3">`sui keytool import INPUT KEY_SCHEME`</td>
+		<tr> 	
+      <td class="w-2/3">`sui keytool import INPUT KEY_SCHEME`</td>
 			<td class="w-1/3">Add a new key to Sui CLI Keystore using either the input mnemonic phrase or a Bech32 encoded 33-byte flag || privkey starting with "suiprivkey"</td>
 		</tr>
 		<tr>
