--- a/sdk/docs/pages/typescript/owned-object-pool/examples.mdx
+++ b/sdk/docs/pages/typescript/owned-object-pool/examples.mdx
@@ -2,9 +2,14 @@
 
 import { Callout } from 'nextra/components';
 
-<Callout type="info">
-	Sui Owned Object Pools (SuiOOP) is a beta library. Enhancements and changes are likely during
-	development.
+<Callout type="warning">
+	Sui Owned Object Pools (SuiOOP) will likely be replaced by
+	[`ParallelTransactionExecutor`](../executors#paralleltransactionexecutor) from
+	`@mysten/sui/transactions`
+
+    Sui Owned Object Pools (SuiOOP) is a beta library. Enhancements and changes are likely during
+    development.
+
 </Callout>
 
 These examples demonstrate some possible use cases for the Sui Owned Object Pool library.
