--- a/sdk/docs/pages/typescript/transaction-building/intents.mdx
+++ b/sdk/docs/pages/typescript/transaction-building/intents.mdx
@@ -1,13 +1,13 @@
 # Transaction Intents
 
-Transaction Intents allow SDKs and [Transaction Plugins](../plugins) allow complex operations to
-more easily be added to a Transaction. The Typescript SDK currently only includes a single Intent
+Transaction Intents enable 3rd party SDKs and [Transaction Plugins](../plugins) to more easily add
+complex operations to a Transaction. The Typescript SDK currently only includes a single Intent
 (CoinWithBalance), but more will be added in the future.
 
 ## The CoinWithBalance intent
 
 The `CoinWithBalance` intent makes it easy to get a coin with a specific balance. For SUI, this has
-generally been done by splitting off the gas coin:
+generally been done by splitting the gas coin:
 
 ```typescript
 const tx = new Transaction();
@@ -37,9 +37,9 @@ tx.transferObjects(
 );
 ```
 
-Using gas for splitting off SUI also causes problems for sponsored transactions. When sponsoring
+Splitting the gas coin also causes problems for sponsored transactions. When sponsoring
 transactions, the gas coin comes from the sponsor instead of the transaction sender. Transaction
-sponsors usually not sponsor transactions that use the gas coin for anything other than gas. To
+sponsors usually do not sponsor transactions that use the gas coin for anything other than gas. To
 transfer SUI that does not use the gas coin, you can set the `useGasCoin` option to `false`:
 
 ```typescript
