--- a/docs/content/references/contribute/mdx-components.mdx
+++ b/docs/content/references/contribute/mdx-components.mdx
@@ -147,6 +147,12 @@ To include only sections of code, add an ID to identify the section, function, s
 
 #### Include a Move section
 
+:::info
+
+This approach is a work in progress and there are certain formatting situations that prevents their use. In those cases, use the `docs://#id` approach instead.
+
+:::
+
 You can include specific sections of Move code using the following constructs appended to the end of the code directory. You can uses a comma delimited list for functions and structs to include each in the same codeblock:
 - Module: #module=MODULE::NAME
 - Function: #fun=FUNCTION_NAME,ANOTHER_FUNCTION
