add link to wallet standard docs

--- a/sdk/docs/pages/typescript/migrations/sui-1.0.mdx
+++ b/sdk/docs/pages/typescript/migrations/sui-1.0.mdx
@@ -429,10 +429,8 @@ We have added 3 new features to the wallet standard designed to allow efficient 
 Transactions in wallets without waiting for previous transactions to be indexed in the wallets RPC
 API.
 
-For more details on how wallets can take advantage of these features, see the wallet-standard
-documentation.
-
-TODO: Add links to unwritten wallet-standard docs
+For more details on how wallets can take advantage of these features, see the
+[wallet-standard documentation](https://docs.sui.io/standards/wallet-standard).
 
 The old `sui:signTransactionBlock` and `sui:signAndExecuteTransactionBlock` methods have been
 deprecated in favor of the new `sui:signTransaction` and `sui:signAndExecuteTransaction` methods,
