--- a/sdk/docs/pages/dapp-kit/wallet-hooks/useSignTransaction.mdx
+++ b/sdk/docs/pages/dapp-kit/wallet-hooks/useSignTransaction.mdx
@@ -1,22 +1,21 @@
 import { UseSignTransactionExample } from '../../../examples/wallet-hooks';
 
-# useSignTransactionBlock
+# useSignTransaction
 
-Use the `useSignTransactionBlock` hook to prompt the user to sign a transaction block with their
-wallet.
+Use the `useSignTransaction` hook to prompt the user to sign a transaction with their wallet.
 
 ```ts
 import {
 	ConnectButton,
 	useCurrentAccount,
-	useSignTransactionBlock,
+	useSignTransaction,
 	useSuiClient,
 } from '@mysten/dapp-kit';
 import { toB64 } from '@mysten/sui/utils';
 import { useState } from 'react';
 
 function MyComponent() {
-	const { mutateAsync: signTransactionBlock } = useSignTransactionBlock();
+	const { mutateAsync: signTransaction } = useSignTransaction();
 	const [signature, setSignature] = useState('');
 	const client = useSuiClient();
 	const currentAccount = useCurrentAccount();
@@ -29,8 +28,8 @@ function MyComponent() {
 					<div>
 						<button
 							onClick={async () => {
-								const { bytes, signature, reportTransactionEffects } = await signTransactionBlock({
-									transactionBlock: new TransactionBlock(),
+								const { bytes, signature, reportTransactionEffects } = await signTransaction({
+									transaction: new Transaction(),
 									chain: 'sui:devnet',
 								});
 
@@ -48,7 +47,7 @@ function MyComponent() {
 								console.log(executeResult);
 							}}
 						>
-							Sign empty transaction block
+							Sign empty transaction
 						</button>
 					</div>
 					<div>Signature: {signature}</div>
@@ -65,13 +64,13 @@ function MyComponent() {
 
 ## Arguments
 
-- `transactionBlock`: The transaction block to sign.
-- `chain`: (optional) The chain identifier the transaction block should be signed for.
+- `transactionBlock`: The transaction to sign.
+- `chain`: (optional) The chain identifier the transaction should be signed for.
 
 ## Result
 
 - `signature`: The signature of the message, as a Base64-encoded `string`.
-- `transactionBlockBytes`: The serialized transaction bytes, as a a Base64-encoded `string`.
+- `bytes`: The serialized transaction bytes, as a a Base64-encoded `string`.
 - `reportTransactionEffects`: A function to report the transaction effects to the wallet. This
   callback should always be invoked after executing the signed transaction. This function accepts
   the `rawEffects` returned from JSON-RPC `executeTransactionBlock` method, or the `effects.bcs`
