--- a/docs/content/guides/developer/coin.mdx
+++ b/docs/content/guides/developer/coin.mdx
@@ -18,7 +18,7 @@ The example module includes a `mint` function. You pass the `TreasuryCap` create
 
 If you published the previous example to a Sui network, you can use the `sui client call` command to mint coins and deliver them to the address you provide. See [Sui CLI](../../references/cli.mdx) for more information on the command line interface.
 
-{@include: ../../../snippets/info-gas-budget.mdx}
+{@include: ../../snippets/info-gas-budget.mdx}
 
 ```shell
 sui client call --function mint --module mycoin --package <PACKAGE-ID> --args <TREASURY-CAP-ID> <COIN-AMOUNT> <RECIPIENT-ADDRESS> --gas-budget <GAS-AMOUNT>
