--- a/docs/content/guides/developer/coin/regulated.mdx
+++ b/docs/content/guides/developer/coin/regulated.mdx
@@ -106,3 +106,10 @@ MutatedObjects:
 ```
 
 For all `Coin` functions available, see the Sui framework [`coin` module documentation](https://github.com/MystenLabs/sui/blob/main/crates/sui-framework/docs/sui-framework/coin.md).
+
+## Related links
+
+- [Closed Loop Token standard](../../../standards/closed-loop-token.mdx): Details for the standard used to create tokens on Sui.
+- [Source code](https://github.com/MystenLabs/sui/blob/main/examples/move/coin/sources/regcoin.move): The source code in GitHub for this example.
+- [In-Game Tokens](./in-game-token.mdx): Example of how to create tokens for use as in-game currency.
+- [Regulated Coin and Deny List](./loyalty.mdx): Example of how to create tokens that reward brand or service loyalty on the Sui network.
